# HTTPServer

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  HttpBuilder.h  README.md  Server.cpp  Server.h  clientRunner.cpp  serverRunner.cpp
src/: Client.cpp  Client.h  ClientQueue.cpp  ClientQueue.h  Configurator.cpp  Configurator.h  FileMenager.cpp  FileMenager.h  HttpBuilder.cpp  HttpBuilder.h  HttpParser.cpp  HttpParser.h  Logger.cpp  Logger.h  Server.cpp  Server.h  exampleScript.cpp  serverRunner.cpp
